# ai-analytics-evals

./: .gitignore  CLAUDE.md  DATA-GOVERNANCE.md  README.md  pyproject.toml
.claude/skills/: CONVENTIONS.md
aievals/: __init__.py  campaign.py  cluster_errors.py  compare_runs.py  html_style.py  monitor.py  pipeline.py  run_eval.py  scorecard.py  scorecard_html.py  verify_gold.py
aievals/adapters/: __init__.py  ai_analyst_plus.py  ai_analyst_starter.py  base.py
aievals/data/: __init__.py  gold.py  gold_cases.example.yaml  novamart_gold.yaml  novamart_gold_candidates.yaml
aievals/graders/: __init__.py  _load.py  a10_data_fitness.py  a1_reliability.py  a2_known_answer.py  a3_provenance.py  a4_triangulation.py  a5_rubric_judge.py  a6_methodology.py  a7_decision.py  a8_execution.py  a9_confidence.py  base.py
tests/: test_a10_data_fitness.py  test_a2_anchored.py  test_a3_provenance.py  test_a4_triangulation.py  test_a5_rubric_judge.py  test_a6_methodology.py  test_a7_decision.py  test_a8_execution.py  test_a9_confidence.py  test_b0_system.py  test_b1c_company_glossary.py  test_b4_schema.py  test_b5_query_patterns.py  test_b6_corrections.py  test_b7_task_scoping.py  test_b_economics.py  test_b_format.py  test_b_freshness.py  test_b_granularity.py  test_b_home.py  test_b_skills.py  test_b_supply.py  test_b_topology.py  test_cluster_errors.py  test_compare_runs.py  test_comparison.py  test_integrators.py  test_layer0.py  test_monitor.py  test_run_eval.py  test_scorecard_html.py  test_substrate.py  test_verify_gold.py
tools/: secret_scan.py  test_secret_scan.py
(+73 files in other folders)
